# Sharp-features-from-3D-Image

./: CMakeLists.txt  README.md  extract_sharp_features.cpp  sharp_feature_extraction.h  sharpness_measure.h
accuracy_measure/: accuracy_measure.h
element_graph/: Element_graph.h  element_graph_process.h  graph_element.h
feature_graph/: Surfel_point.h  polyline_extractor.h  polyline_optimizer.h  polyline_regularizer.h  surfel_selector.h
feature_graph/energy/: Get_plane_intersection_energy.h  Get_smoothing_and_plane_intersection_energy.h
helper/: cgal_helper.h  dgtal_helper.h  dgtal_helper_types.h  geometry_helper.h  image_helper.h  mesh_generator.h  timing_helper.h
input/: cube_rotated.inr  cut_cube_sphere.inr  cylinder_double.inr
polyline/: Polylines.h  polyline_process.h  polyline_snap.h
surface/: Surface_graph.h  Surfel.h  surface_process.h
